==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.13.2 Mar 10 2015
. (Tromador) Added "Painite" to Item.csv

v6.13.1 Mar 06 2015
. (kfsone) "shipvendor" command:
  - Default action is now to list ships at given station, e.g.
    trade.py shipvendor galileo
  - Added "--name-sort" (--name) to sort list by ship name,
. (kfsone) Fixed some problems with maddavo's import,
. (kfsone) Added "WARNING" level events (use -qq to disable),
. (kfsone) Fixed #195 "local" ValueError when no stations listed,
+ Dry411S: ShipVendors

v6.13.0 Mar 03 2015
. (kfsone) Added "modified" column to ShipVendor table,
. (kfsone) "maddavo" import plugin:
  - Added "--opt=shipvendors" which imports his ShipVendor.csv,
    - Entries with a 'modified' of "DELETED" will be
  - Added "--opt=csvonly" to stop after importing any csv files (no prices),
  - Added "--opt=csvs" to import all the csvs
    (equivalent to typing --opt=systems --opt=stations --opt=shipvendor)
. (kfsone) "market" sub-command:
  - Default behavior is equivalent to "--buy --sell",
  - You now only need to specify --buy (-B) or --sell (-S) to list ONLY
    those columns, so "trade.py market SOL -vv" now shows both sets of data.
. (kfsone) "local" sub-command:
  - Added "--stations" option: only list systems with stations,
  - Added "--trading" option: only list stations that are flagged as having
    a market or have trade data available
  - Added "--blackmarket" option: only list stations with a black market,
  - Added "--shipyard" option: only list stations with a ship yard,
. (kfsone) "run" sub-command:
  - check from stations for whether they have anything that can be bought,
  - better feedback on some edge-cases where a route cannot be found,
  - fixed some problems with --via,
  - better feedback when using --jumps=0 or --ly=0,

v6.12.4 Mar 02 2015